Updated to remove security

--- a/build.gradle
+++ b/build.gradle
@@ -43,12 +43,14 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+//	compile("org.springframework.boot:spring-boot-starter-security")
 }
 
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
+
 }
 
 test {
