--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ zuul.ignored-services='*'
 #zuul.prefix=/api
 #zuul.routes.customer.serviceId=customer-service1
 #zuul.host.socket-timeout-millis=30000
-
+jwt.security.key=j3H5Ld5nYmGWyULy6xwpOgfSH++NgKXnJMq20vpfd+8=t
